sort.baseball.NaiveBaseball.scala.error
Erreur de compilation :
NaiveBaseball:7: error: not found: value estTriee
  }while(!estTriee())
          ^