sort.baseball.NaiveBaseball.scala.code
override def run() {
  do{
    var trouB=getTrouBase()
    var trouBP=getTrouPosition()
    deplace(trouB-1,0)
    
  }while(!estTriee())
}